{
  "version": 4,
  "terraform_version": "1.2.9",
  "serial": 46,
  "lineage": "4b7778f3-8737-1393-138d-20ef7d17c901",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "linux-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ee1137d1f10db4c4",
            "domain": "vpc",
            "id": "eipalloc-0ee1137d1f10db4c4",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-54-161-148-28.compute-1.amazonaws.com",
            "public_ip": "54.161.148.28",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "avl-dev-linux-eip"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "avl-dev-linux-eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "linux-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-094f380725f62923a",
            "arn": "arn:aws:ec2:us-east-1:534348535786:instance/i-06e9bcbda135ffcb7",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 100,
                "kms_key_id": "arn:aws:kms:us-east-1:534348535786:key/234235ac-9d19-4f03-9768-11ab50313fb2",
                "throughput": 0,
                "volume_id": "vol-04d02dc50a76e4ef6",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-06e9bcbda135ffcb7",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "avl-dev-linux-us-east-1",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0afe65463b9cbc793",
            "private_dns": "ip-10-11-1-148.ec2.internal",
            "private_ip": "10.11.1.148",
            "public_dns": "ec2-54-92-153-99.compute-1.amazonaws.com",
            "public_ip": "54.92.153.99",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 100,
                "kms_key_id": "arn:aws:kms:us-east-1:534348535786:key/234235ac-9d19-4f03-9768-11ab50313fb2",
                "throughput": 0,
                "volume_id": "vol-071d6308ec65faa46",
                "volume_size": 20,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-00978398fbe70929e",
            "tags": {
              "Environment": "dev",
              "Name": "avl-dev-linux-server"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "avl-dev-linux-server"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-00312d26f880b4332"
            ]
          },
          "dependencies": [
            "aws_key_pair.key_pair",
            "aws_security_group.aws-linux-sg",
            "aws_subnet.public-subnet",
            "aws_vpc.vpc",
            "data.aws_ami.ubuntu-linux-1804"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:534348535786:internet-gateway/igw-0d169eb7975731b78",
            "id": "igw-0d169eb7975731b78",
            "owner_id": "534348535786",
            "tags": {
              "Environment": "dev",
              "Name": "avl-dev-igw"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "avl-dev-igw"
            },
            "vpc_id": "vpc-0bc65413f53703802"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:534348535786:route-table/rtb-03b29be806a00ca78",
            "id": "rtb-03b29be806a00ca78",
            "owner_id": "534348535786",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d169eb7975731b78",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "avl-dev-public-subnet-rt"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "avl-dev-public-subnet-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bc65413f53703802"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-rt-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0de397b3349b5efe2",
            "route_table_id": "rtb-03b29be806a00ca78",
            "subnet_id": "subnet-00978398fbe70929e"
          },
          "dependencies": [
            "aws_route_table.public-rt",
            "aws_subnet.public-subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "aws-linux-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:534348535786:security-group/sg-00312d26f880b4332",
            "description": "Allow incoming HTTP connections",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00312d26f880b4332",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow incoming HTTP connections",
                "from_port": 5000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow incoming SSH connections",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "avl-dev-linux-sg",
            "name_prefix": "",
            "owner_id": "534348535786",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "avl-dev-linux-sg"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "avl-dev-linux-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bc65413f53703802"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:534348535786:subnet/subnet-00978398fbe70929e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.11.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00978398fbe70929e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "534348535786",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "avl-dev-public-subnet"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "avl-dev-public-subnet"
            },
            "vpc_id": "vpc-0bc65413f53703802"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:534348535786:vpc/vpc-0bc65413f53703802",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.11.0.0/16",
            "default_network_acl_id": "acl-0623f5ac1ad64b86a",
            "default_route_table_id": "rtb-0e858ca86d1263c64",
            "default_security_group_id": "sg-0cbf5f10ace15d2cc",
            "dhcp_options_id": "dopt-02bb3cb3826ba5fb9",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0bc65413f53703802",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e858ca86d1263c64",
            "owner_id": "534348535786",
            "tags": {
              "Environment": "dev",
              "Name": "avl-dev-vpc"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "avl-dev-vpc"
            }
          }
        }
      ]
    }
  ]
}